--- a/angular.json
+++ b/angular.json
@@ -54,6 +54,7 @@
               "public/assets/css/nice-select.css",
               "public/assets/css/style.css",
               "public/assets/css/form-style.css",
+              "public/assets/css/table-style.css",
               "public/assets/css/tokens.css"
             ],
             "scripts": [
