--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^19.1.0",
     "@angular/compiler": "^19.1.0",
     "@angular/core": "^19.1.0",
+    "@angular/fire": "^19.2.0",
     "@angular/forms": "^19.1.0",
     "@angular/material": "^19.2.19",
     "@angular/platform-browser": "^19.1.0",
@@ -25,6 +26,7 @@
     "@ngx-translate/http-loader": "^17.0.0",
     "chart.js": "^4.5.0",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "firebase": "^11.10.0",
     "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
