--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "@danielmoncada/angular-datetime-picker": "^20.0.0",
     "@ngx-translate/core": "^17.0.0",
     "@ngx-translate/http-loader": "^17.0.0",
+    "@ngxmc/datetime-picker": "^19.2.2",
+    "@ngxmc/moment-adapter": "^19.2.2",
     "chart.js": "^4.5.0",
     "chartjs-plugin-datalabels": "^2.2.0",
     "firebase": "^11.10.0",
+    "moment": "^2.30.1",
     "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
