--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "chart.js": "^4.5.0",
     "chartjs-plugin-datalabels": "^2.2.0",
     "firebase": "^11.10.0",
+    "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
@@ -40,6 +41,7 @@
     "@angular/cli": "^19.1.4",
     "@angular/compiler-cli": "^19.1.0",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.21",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
